Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
         <h1>MVJava - Java programs</h1>
 
 <p>My Java programs and games.
-The repo is mostly my code for assigned labs, but there are quite a few projects (like a calculator) in <code>/programming</code>.</p>
+Games, labs and pet projects from a year of Java at Monta Vista.</p>
+
+<h2>SlimeRun - Final educational game project</h2>
+
+<p><img src="direct.gomobilefirst.com/img/work/slimerun/SlimeRun2.png" alt="SlimeRun screenshot"><img src="direct.gomobilefirst.com/img/work/slimerun/SlimeRun3.png" alt="SlimeRun question dialog"></p>
 
 <p>Copyright (c) 2013 Ajay Jain</p>
       </section>
