--- a/index.html
+++ b/index.html
@@ -7,37 +7,38 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
+    <script src="javascripts/main.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/ajayjain/MVJava">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/ajayjain/MVJava/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/ajayjain/MVJava/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+
+      <header>
+        <h1>Java projects from Monta Vista</h1>
+        <p>A year of Java programs and games from Mr. Greenstein's Java class.</p>
+      </header>
+
+      <div id="banner">
+        <span id="logo"></span>
+
+        <a href="https://github.com/ajayjain/MVJava" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/ajayjain/MVJava/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/ajayjain/MVJava/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
 
     <div class="wrapper">
-
+      <nav>
+        <ul></ul>
+      </nav>
       <section>
-        <div id="title">
-          <h1>Java projects from Monta Vista</h1>
-          <p>A year of Java programs and games from Mr. Greenstein's Java class.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/ajayjain">ajayjain</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
-        </div>
-
         <h1>MVJava - Java programs</h1>
 
 <p>My Java programs and games.
@@ -45,11 +46,14 @@ Games, labs and pet projects from a year of Java at Monta Vista.</p>
 
 <h2>SlimeRun - Final educational game project</h2>
 
-<p><img src="direct.gomobilefirst.com/img/work/slimerun/SlimeRun2.png" alt="SlimeRun screenshot"><img src="direct.gomobilefirst.com/img/work/slimerun/SlimeRun3.png" alt="SlimeRun question dialog"></p>
+<p><img src="http://direct.gomobilefirst.com/img/work/slimerun/SlimeRun2.png" alt="SlimeRun screenshot"><img src="http://direct.gomobilefirst.com/img/work/slimerun/SlimeRun3.png" alt="SlimeRun question dialog"></p>
 
 <p>Copyright (c) 2013 Ajay Jain</p>
       </section>
-
+      <footer>
+        <p>Project maintained by <a href="https://github.com/ajayjain">ajayjain</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
